# HackMichelin

./: .env.exemple  .gitignore  .remaining  .service-pids  README.md  bulk_format.py  docker-compose.yml  schemas.md  stable-pg-data.sql  transform_restaurants.py
.claude/: settings.local.json
CommentService/: .env.example  Cargo.toml  Dockerfile  README
CommentService/src/: auth.rs  config.rs  db_cql.rs  error.rs  http.rs  main.rs  models.rs
DownloadService/: .env.example  Cargo.toml  Dockerfile  README
DownloadService/src/: config.rs  error.rs  http.rs  main.rs
FeedService/: .env.example  Cargo.toml  Dockerfile  README
FeedService/src/: auth.rs  config.rs  db_cql.rs  error.rs  http.rs  main.rs  models.rs  mqtt.rs
LikeService/: .env.example  Cargo.toml  Dockerfile  README
LikeService/src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs
LoginService/: .env.example  Cargo.toml  Dockerfile  README
LoginService/src/: auth.rs  config.rs  db.rs  error.rs  http.rs  main.rs  models.rs  mqtt.rs
MapsDataService/: .env.example  Cargo.toml  Dockerfile  README
MapsDataService/src/: config.rs  db.rs  error.rs  http.rs  main.rs  models.rs  mqtt.rs  search.rs
PostService/: .env.example  Cargo.toml  Dockerfile  README
PostService/src/: auth.rs  config.rs  db_cql.rs  db_pg.rs  error.rs  http.rs  main.rs  models.rs  mqtt.rs
SearchService/: .env.example  Cargo.toml  Dockerfile  README
SearchService/src/: config.rs  error.rs  es.rs  handlers.rs  main.rs  mqtt.rs
StatsService/: .env.example  Cargo.toml  Dockerfile  README
StatsService/src/: config.rs  db.rs  error.rs  http.rs  main.rs  models.rs  mqtt.rs
UploadService/: .env.example  Cargo.toml  Dockerfile  README
UploadService/src/: auth.rs  config.rs  db.rs  error.rs  http.rs  main.rs  models.rs
UserService/: .env.example  Cargo.toml  Dockerfile  README
UserService/src/: auth.rs  config.rs  db_cql.rs  db_pg.rs  error.rs  http.rs  main.rs  models.rs  mqtt.rs
init/cassandra/: init.cql
init/import/: Dockerfile  import.py  requirements.txt
init/postgres/: 01_schema.sql  02_seed_users.sql
mich-front/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
mich-front/.claude/: settings.local.json
mich-front/src/: App.tsx  index.css  main.tsx
mich-front/src-tauri/: Cargo.toml  tauri.conf.json
mich-front/src-tauri/src/: main.rs
mich-front/src/components/common/: ArticleCard.tsx  LoadingSpinner.tsx  MichelinStar.tsx  RestaurantCard.tsx
mich-front/src/components/home/: ExperiencesTriptych.tsx
mich-front/src/components/layout/: BottomNav.tsx  ResizableSplit.tsx  TopBar.tsx
mich-front/src/components/map/: MapErrorBoundary.tsx  MapView.tsx
mich-front/src/context/: AppContext.tsx
mich-front/src/data/: articles.ts
mich-front/src/hooks/: useGeolocation.ts  useLikes.ts  useNominatim.ts
mich-front/src/pages/: ArticleDetailPage.tsx  ArticlesPage.tsx  HomePage.tsx  MapPage.tsx  ProfilePage.tsx  RestaurantDetailPage.tsx  ShortsPage.tsx
mich-front/src/services/: api.ts  posts.ts  restaurants.ts
mich-front/src/types/: index.ts
mosquitto/config/: mosquitto.conf
nginx/conf.d/: gateway.conf
