[package]
name = "download-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "download_service"
path = "src/main.rs"

[dependencies]
tokio             = { version = "1",   features = ["full"] }
axum              = "0.7"
serde             = { version = "1",   features = ["derive"] }
serde_json        = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy           = "0.15"
thiserror         = "1"
anyhow            = "1"
tower-http        = { version = "0.5", features = ["trace", "cors", "fs"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
