[package]
name = "stats-service"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "stats_service"
path = "src/main.rs"
[dependencies]
tokio              = { version = "1",    features = ["full"] }
axum               = "0.7"
sqlx               = { version = "0.7",  features = ["runtime-tokio-rustls", "postgres"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
rumqttc            = "0.24"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
dotenvy            = "0.15"
thiserror          = "1"
anyhow             = "1"
tower-http         = { version = "0.5",  features = ["cors"] }
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
